--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ChuckNorrisJokesApp</string>
+
+    <string name="label_button_oke">Oke</string>
+    <string name="label_dialog_title_alert">Alert</string>
 </resources>
