beautify splash screen and category screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <string name="label_button_oke">Oke</string>
     <string name="label_dialog_title_alert">Alert</string>
+
+    <string name="hint_search_jokes">Type to search some jokes..</string>
 </resources>
