--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="label_dialog_title_alert">Alert</string>
 
     <string name="hint_search_jokes">Type to search some jokes..</string>
+
+    <string name="label_share_subject">Check this joke from Chuck Norris</string>
+    <string name="label_share_body">Check this Chuck Norris\'s funny joke\n%1$s</string>
+    <string name="label_share_using">Share using</string>
 </resources>
