add not found layout when search not found

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="label_share_subject">Check this joke from Chuck Norris</string>
     <string name="label_share_body">Check this Chuck Norris\'s funny joke\n%1$s</string>
     <string name="label_share_using">Share using</string>
+
+    <string name="label_data_not_found">Jokes not found\nTry use another keywords..</string>
 </resources>
